# SM63Redux

./: # Godot Update Notes.txt  .gitattributes  .gitignore  .gitmodules  Bottle_refill_script.gd  CONTRIBUTING.md  CameraArea.gd  Coin_script.gd  Death.gd  GUI.tscn  LD Todo.txt  LICENSE.txt  LevelDesigner.gd  LevelDesigner.tscn  Main.tscn  Music.gd  Player.gd  Player.tscn  README.md  SECURITY.md  SolidBox.tscn  TileRef.gd  TileRef.tscn  VPSNode.gd  WaterMeter.gd  area2D_enemy_script.gd  cleanfiles.sh  default_bus_layout.tres  default_env.tres  digtest.gd  enemies.gd  enemy_placeholder.gd  enemy_placeholder.tscn  enemy_placeholder_script.gd  export_presets.cfg  goomba_squish1.png.import  goomba_squish2.png.import  goomba_squish3.png.import  goomba_squish4.png.import  goombajump1.png.import  (+43 more)
.github/: PULL_REQUEST_TEMPLATE.md
Classes/: ld_item_class.gd
Fonts/: Sunbeam.tres
Items/: LDItem.gd  LDItem.tscn
Shaders/: Glow.tres
Sprites/: solid.png.import
Themes/: Debug.tres
Tilesets/: 137.png.import  312.png.import  Legacy.tres  jungleGrassM.png.import
actors/: CameraArea.gd  CameraArea.tscn  camera_area.gd  camera_area.tscn  residual_sfx.tscn  safety_net.tscn  spawner.gd  spawner.tscn  timer_end.gd  timer_end.tscn
android/: .build_version
backgrounds/: bg_plane.gd  parallax_object.gd  scrolling_parallax_layer.gd
classes/: autoplay.gd  (+3 more)
pipescript/: Cargo.toml  LICENSE  compile_tool.bash  compile_tool.sh
pipescript/prog/: main.ps
pipescript/src/: interpreter.rs  lib.rs  library.rs  main.rs  preprocessor.rs  ps_env.rs  reader.rs  standalone.rs
(+4448 files in other folders)
